--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 							<div class="row justify-content-center">
 								<div class="col-6">
 									<i class="bi bi-clock fs-3"></i>
-									<p>10.00 s/d <br> selesai</p>
+									<p>11.00 s/d <br> selesai</p>
 								</div>
 								<div class="col-6">
 									<i class="bi bi-calendar2-heart fs-3"></i>
@@ -370,20 +370,23 @@
 			<div class="row justify-content-center">
 				<figure class="w-75 mt-3" style="aspect-ratio: 2/1;" data-aos="zoom-in-up">
 					<source media="(min-width: 3850px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
-					<a href="./dist/img/gallery/sumatra2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
-						<img src="./dist/img/gallery/sumatra2.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
-					</a>
-					<a href="./dist/img/gallery/sumatra1.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
-						<img src="./dist/img/gallery/sumatra1.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
-					</a>
 					<a href="./dist/img/gallery/engaged1.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/engaged1.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
 					<a href="./dist/img/gallery/engaged2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/engaged2.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
+					<a href="./dist/img/gallery/engaged3.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/engaged3.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
 					<a href="./dist/img/gallery/engaged4.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/engaged4.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra1.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra1.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra2.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
 					<a href="./dist/img/gallery/sumatra3.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/sumatra3.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
@@ -391,17 +394,41 @@
 					<a href="./dist/img/gallery/sumatra4.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/sumatra4.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
-					<a href="./dist/img/gallery/sumatra5.jpeg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
-						<img src="./dist/img/gallery/sumatra5.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					<a href="./dist/img/gallery/jawa1.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa1.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
-					<a href="./dist/img/gallery/sumatra6.jpeg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
-						<img src="./dist/img/gallery/sumatra6.jpeg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					<a href="./dist/img/gallery/jawa2.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa2.jpg" style="object-position: 50% 25%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/jawa3.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa3.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/jawa4.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa4.jpg" style="object-position: 50% 50%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra5.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra5.jpg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/sumatra6.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra6.jpg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
 					<a href="./dist/img/gallery/sumatra7.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
 						<img src="./dist/img/gallery/sumatra7.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
-					<a href="./dist/img/gallery/sumatra8.jpeg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
-						<img src="./dist/img/gallery/sumatra8.jpeg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					<a href="./dist/img/gallery/sumatra8.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/sumatra8.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/jawa5.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa5.jpg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/jawa6.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa6.jpg" style="object-position: 50% 20%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/jawa7.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa7.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
+					</a>
+					<a href="./dist/img/gallery/jawa8.jpg" data-toggle="lightbox" data-gallery="thumbnail-gallery">
+						<img src="./dist/img/gallery/jawa8.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Image 1">
 					</a>
 				</figure>
 			</div>
@@ -438,13 +465,13 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra5.jpeg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra5.jpeg" alt="Sumatera 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
+								<a href="./dist/img/gallery/sumatra5.jpg" data-toggle="lightbox" data-gallery="my-gallery">
+									<img src="./dist/img/gallery/sumatra5.jpg" alt="Sumatera 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
 								</a>
 							</div>
 							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra6.jpeg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra6.jpeg" alt="Sumatera 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
+								<a href="./dist/img/gallery/sumatra6.jpg" data-toggle="lightbox" data-gallery="my-gallery">
+									<img src="./dist/img/gallery/sumatra6.jpg" alt="Sumatera 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
 								</a>
 							</div>
 							<div class="col mt-4">
@@ -453,8 +480,8 @@
 								</a>
 							</div>
 							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra8.jpeg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra8.jpeg" alt="Sumatera 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+								<a href="./dist/img/gallery/sumatra8.jpg" data-toggle="lightbox" data-gallery="my-gallery">
+									<img src="./dist/img/gallery/sumatra8.jpg" alt="Sumatera 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 								</a>
 							</div>
 						</div>
@@ -463,28 +490,24 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa1.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa2.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa2.jpg" alt="Jawa 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa3.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa3.jpg" alt="Jawa 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa4.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa4.jpg" alt="Jawa 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -492,28 +515,24 @@
 					<div class="carousel-item">
 						<div class="row row-cols-2 row-cols-lg-4">
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa5.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa6.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa6.jpg" alt="Jawa 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa7.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa7.jpg" alt="Jawa 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 							<div class="col mt-4">
-								<picture>
-									<source media="(min-width: 385px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+								<a href="./dist/img/gallery/jawa8.jpg" data-toggle="lightbox" data-gallery="my-gallery">
 									<img src="./dist/img/gallery/jawa8.jpg" alt="Jawa 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</picture>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -879,16 +898,6 @@
 								<img src="https://upload.wikimedia.org/wikipedia/commons/8/85/LinkAja.svg" alt="" class="w-25">
 								<p class="mt-3">a/n Surya Mauliadi</p>
 								<label class="copy-content">087885858654</label>
-								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
-										<path fill-rule="evenodd"
-											d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V2Zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6ZM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1H2Z"
-										></path>
-									</svg>
-									Salin
-								</button>
-								<p class="mt-3">a/n Arrum Hidayati</p>
-								<label class="copy-content">085172026454</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
 										<path fill-rule="evenodd"
