--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 	<section id="gallery">
 		<div class="container m-auto mb-lg-5 text-center">
 			<h2 class="f-sacramento display-1 fw-bold" data-aos="zoom-in-up">Gallery</h2>
-			<p>Tidak ada yang kebetulan di dunia ini, semua sudah tersusun rapih oleh sang maha kuasa, kita tidak bisa memilih kepada siapa kita akan jatuh cinta.</p>
+			<p>Sedikit moment kebersamaan yang sempat kami abadikan.</p>
 
 			<div class="row justify-content-center">
 				<figure class="w-75 mt-3" style="aspect-ratio: 2/1;" data-aos="zoom-in-up">
