--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 					<div class="card border border-white rounded-4 bg-secondary text-white">
 						<div class="card-body">
 
-							<h5 class="card-title display-6 f-dancing fw-semibold">Akad Nikah</h5>
+							<h5 class="card-title display-6 f-dancing fw-semibold text-pink">Akad Nikah</h5>
 
 							<div class="row justify-content-center">
 								<div class="col-6">
@@ -249,7 +249,7 @@
 					<div class="card border border-white rounded-4 bg-secondary text-white">
 						<div class="card-body">
 
-							<h5 class="card-title display-6 f-dancing fw-semibold">Resepsi</h5>
+							<h5 class="card-title display-6 f-dancing fw-semibold text-pink">Resepsi</h5>
 
 							<div class="row justify-content-center">
 								<div class="col-6">
@@ -1010,7 +1010,7 @@
 <!-- CUSTOM -->
 <script src="./dist/js/loader.js"></script>
 <script src="./dist/js/features.js"></script>
-<!-- <script src="./dist/js/trigger.js"></script> -->
+<script src="./dist/js/trigger.js"></script>
 
 <script>
 
