--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="Arrum Surya Wedding">
 	<meta property="og:description" content="Invitation">
 	<meta property="og:url" content="https://arrumsurya-wedding.github.io/">
-	<meta property="og:image" content="https://arrumsurya-wedding.github.io/dist/img/gallery/jawa1.jpg">
+	<meta property="og:image" content="https://arrumsurya-wedding.github.io/dist/img/og.jpg">
 	<title>Surya & Arrum Wedding</title>
 
 	<!-- FAVICON -->
