--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Arrum Surya Wedding">
+	<meta property="og:title" content="Arrum & Surya Wedding">
 	<meta property="og:description" content="Invitation">
 	<meta property="og:url" content="https://arrumsurya-wedding.github.io/">
 	<meta property="og:image" content="https://arrumsurya-wedding.github.io/dist/img/og.jpg">
