--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 	<!-- PRELOADER -->
 	<div style="height: 100vh;transition: height 200ms linear;" class="preloader w-100 fixed-top bg-danger-subtle overflow-hidden d-flex flex-column justify-content-center align-items-center">
 		<img class="animation__shake" src="./dist/img/logo-animation.gif" alt="AdminLTELogo" height="60" width="60">
+		<p class="mt-3">Mohon tunggu sebentar</p>
+		<p>Sedang memuat halaman</p>
 	</div>
 
 	<!-- COVER SECTION -->
