--- a/index.html
+++ b/index.html
@@ -622,8 +622,8 @@
 						<label for="status" class="form-label">Konfirmasi</label>
 						<select name="status" id="status" class="form-select">
 							<option selected>Pilih salah satu</option>
-							<option value="1">Hadir</option>
-							<option value="0">Tidak Hadir</option>
+							<option value="Hadir">Hadir</option>
+							<option value="Tidak hadir">Tidak Hadir</option>
 						</select>
 					</div>
 				</div>
