--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 								</div>
 								<div class="col-6 px-0">
 									<i class="bi bi-calendar2-heart fs-3"></i>
-									<p>Minggu, <br> 30 Desember 2023</p>
+									<p>Sabtu, <br> 30 Desember 2023</p>
 								</div>
 							</div>
 
@@ -264,7 +264,7 @@
 								</div>
 								<div class="col-6">
 									<i class="bi bi-calendar2-heart fs-3"></i>
-									<p>Minggu, <br> 30 Desember 2023</p>
+									<p>Sabtu, <br> 30 Desember 2023</p>
 								</div>
 							</div>
 
