--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 	<section id="gallery">
 		<div class="container m-auto mb-lg-5 text-center">
 			<h2 class="f-sacramento display-1 fw-bold" data-aos="zoom-in-up">Gallery</h2>
-			<p>Sedikit moment kebersamaan yang sempat kami abadikan.</p>
+			<p data-aos="zoom-in-up">Sedikit moment kebersamaan yang sempat kami abadikan.</p>
 
 			<div class="row justify-content-center">
 				<figure class="w-75 mt-3" style="aspect-ratio: 2/1;" data-aos="zoom-in-up">
@@ -594,7 +594,7 @@
 		<div class="container">
 
 			<!-- Heading -->
-			<div class="row justify-content-center">
+			<div class="row justify-content-center" data-aos="zoom-in-up">
 				<div class="col-md-8 col-11 text-center">
 					<h2 class="f-sacramento display-2 fw-bold">Konfirmasi Kehadiran</h2>
 					<p class="mt-3">Isi form di bawah ini untuk melakukan konfirmasi kehadiran.</p>
@@ -602,7 +602,7 @@
 			</div>
 
 			<!-- Reservation -->
-			<form id="my-form" action="https://script.google.com/macros/s/AKfycbybBEhobQuw9emQHjEYjPndBPHWvI_5yyUesMGvWjuPI1b78ic9n7OpN_LuD1KNcv60/exec" method="post" class="mt-1 row row-cols-md-auto g-3 justify-content-center align-items-center">
+			<form id="my-form" action="https://script.google.com/macros/s/AKfycbybBEhobQuw9emQHjEYjPndBPHWvI_5yyUesMGvWjuPI1b78ic9n7OpN_LuD1KNcv60/exec" method="post" class="mt-1 row row-cols-md-auto g-3 justify-content-center align-items-center" data-aos="zoom-in-up">
 				<div class="col-lg-2 col-7">
 					<div class="mb-3">
 						<label for="nama" class="form-label">Nama</label>
@@ -635,8 +635,8 @@
 			</form>
 
 			<!-- Comment Section -->
-			<div class="row mt-3 g-2 justify-content-center align-items-center">
-				<div class="col-lg-6 col-10">
+			<div class="row mt-3 g-2 justify-content-center align-items-center" data-aos="zoom-in-up">
+				<div class="vh-100 col-lg-6 col-10">
 					<h3>Kirim Pesan dan Ucapan</h3>
 					<form id="commentForm">
 						<div class="form-group">
