--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 			<div class="row merge mt-2 mb-5" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
 					<!-- <h3>꧁<span class="f-arabic display-3"> ﷽</span>꧂</h3> -->
-					<h2><span class="display-3 fw-medium text-pink"> ﷽</span></h2>
-					<p>
+					<h2><span class="f-arabic display-5 fw-medium text-pink">بِسْـــــمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ</span></h2>
+					<p class="mt-4">
 						Assalamu’alaikum Warahmatullahi Wabarakatuh
 						<br>
 						Dengan memohon rahmat dan ridho Allah SWT kami bermaksud menyelenggarakan pernikahan pada :
